# strictcli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.js  package-lock.json  package.json  postinstall.js  pyproject.toml  selfdoc.json  ts-port-spec.md
conformance/: .gitignore  CHANGELOG.md  CLAUDE.md  capture_outputs.py  check_api_surface.py  check_describe_equivalence.py  check_error_parity.py  check_float_fuzz.py  check_schema_parity.py  float_vectors.json  fuzz.py  gen_float_vectors.py  generate_pairwise.py  pyproject.toml  ref_go.py  ref_python.py  run.py  schema.json  test_run_registry.py
conformance/.github/workflows/: ci.yml
conformance/.rlsbl/: config.json  hashes.json  managed-files.json
conformance/.rlsbl/changes/: .validated  0.0.0.md  0.1.0.md  0.2.0.md  0.3.0.jsonl  0.3.0.md  0.3.1.md  0.3.2.jsonl  0.3.2.md  0.3.3.md  0.3.4.md  0.3.5.jsonl  0.3.5.md  0.3.6.jsonl  0.3.6.md  0.4.0.jsonl  0.4.0.md  0.4.1.md  0.5.0.md  0.6.0.md  0.7.0.jsonl  0.7.0.md  unreleased.jsonl
conformance/.rlsbl/hooks/: pre-release.sh
conformance/.strictcli/: schema.json
conformance/cases/: args.json  at_prefix.json  basic.json  boundary.json  check_notes.json  check_purity.json  checks.json  choices.json  command_tags.json  composition.json  compound_types.json  config.json  config_advanced.json  config_field_flag_coexist.json  config_fields.json  config_flag.json  config_hard_error.json  config_no_default_path.json  config_repeatable.json  config_set.json  cross_feature.json  dependencies.json  deprecated.json  dump_schema.json  env.json  env_separator.json  errors.json  exit_codes.json  flag_name_validation.json  flag_sets.json  flags.json  float_format.json  float_type.json  global_conflict_compound.json  global_flags.json  help.json  hermetic.json  infra_env.json  int_type.json  keyword_flags.json  (+18 more)
conformance/conformance_tool/: __init__.py
conformance/describe_go/: go.mod  main.go
conformance/fixtures/: at_literal.txt  trailing_ws.txt
conformance/harness/: .gitignore  go.mod  go.sum  main.go
conformance/harness_ts/: main.js  package.json  smoke_test.py
python/: CHANGELOG.md  CLAUDE.md  README.md  index.js  package-lock.json  package.json  pyproject.toml
python/.rlsbl/: config.json  hashes.json  managed-files.json
python/strictcli/: __init__.py
python/tests/: conftest.py  test_arg_default.py  test_arg_default_validation.py  test_at_prefix.py  test_auto_version.py  test_call.py  test_check_command.py  test_check_discovery.py  test_check_provider.py  test_check_public_api.py  test_check_runner.py  test_check_schema.py  test_check_types.py  test_choices.py  test_choices_none.py  test_command_help_suggestion.py  test_command_tags.py  test_compound_types.py  test_config.py  test_config_fields.py  test_config_file_path.py  test_config_set_bugs.py  test_context.py  test_coverage.py  test_deep_nesting.py  test_dependencies.py  test_deprecated.py  test_dump_schema.py  test_e2e.py  test_env.py  test_exit_codes.py  test_flag_sets.py  test_float_format.py  test_float_type.py  test_float_vectors.py  test_global_flag_conflict_position.py  test_global_flags.py  test_help.py  test_hermetic.py  test_infra_env.py  (+23 more)
python/todo/: keyword-collision-in-flag-param-name.md  public-check-runner-api.md
(+597 files in other folders)
