[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excli"
version = "0.1.0"
description = "An explicit, zero-dependency CLI framework for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "S. M. Hosseini", email = "m.hosseini@veliu.com" }]
keywords = ["excli", "cli", "argparse", "command-line", "framework", "rlsbl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/smm-h/excli"
Repository = "https://github.com/smm-h/excli"
