[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strictcli-conformance"
version = "0.6.0"
description = "Conformance validation tool for strictcli"
requires-python = ">=3.12"
dependencies = ["strictcli", "jsonschema"]
keywords = ["rlsbl"]

[project.scripts]
conformance = "conformance_tool:main"

[tool.setuptools]
packages = ["conformance_tool"]
