[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strictcli"
version = "0.31.0"
description = "A strict CLI framework for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "S. M. Hosseini", email = "m.hosseini@veliu.com" }]
keywords = ["strictcli", "cli", "argparse", "command-line", "framework", "rlsbl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tomlkit>=0.15.1",
]

[dependency-groups]
dev = ["pytest", "allpairspy", "jsonschema"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/smm-h/strictcli"
Repository = "https://github.com/smm-h/strictcli"
